--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.15.4",
     "firebase": "^8.6.2",
     "history": "4.10.1",
+    "moment": "^2.29.1",
     "node-sass": "5.0.0",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
