--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "5.0.0",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
+    "react-dates": "^21.8.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
